--- a/01_07_Built_In_Data_Types_Data_Structures.html
+++ b/01_07_Built_In_Data_Types_Data_Structures.html
@@ -14568,8 +14568,7 @@ For each, we'll show the two equivalent methods:</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Many more set methods and operations are available.
-While they are generally not important for the exam do refer to Python's <a href="https://docs.python.org/3/library/stdtypes.html">online documentation</a> for a complete reference.</p>
+<p>Many more set methods and operations are available - do refer to Python's <a href="https://docs.python.org/3/library/stdtypes.html">online documentation</a> for a complete reference.</p>
 
 </div>
 </div>
